--- a/.gitignore
+++ b/.gitignore
@@ -30,14 +30,37 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
+# Environment & secrets
+.env
+.env.*
+backend/.env
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+*.keystore
+*.keystore.jks
+*.keystore.properties
 
 # typescript
 *.tsbuildinfo
 
-# generated native folders
+# generated native folders (keep if managed outside repo)
 /ios
 /android
 
+# Prisma generated
 /generated/prisma
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build caches
+.cache/
+.tmp/
+.temp/
